# swot

./: .gitignore  02-Santiago_SWOT.ipynb  README.md  example_usage.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  copilot_instructions.md
nbs/: 04-Create_SWOT_Mosaics.ipynb  06-Search_for_S2_Images.ipynb  07-Download_OPERA_masks.ipynb  08-Download_SWOT_rasters.ipynb  10-Train_Classifiers.ipynb  11-SWOT_Raster_pipeline.ipynb  12-SWOT_Raster_Metrics.ipynb  13-Pipeline_1-DatesMatch.ipynb  13-Pipeline_1-Dates_Matching.ipynb  13-Pipeline_1_Dates_Matching.ipynb  14-Pipeline_2-Download_data.ipynb  15-Pipeline_3-Create_Ref_Mask.ipynb  16-Pipeline_4-Metrics.ipynb  16-Pipeline_4-Metrics_2.ipynb  19-ResultsAnalysis.ipynb  results.parquet
nbs/Article/: 01-Introduction_Figures.ipynb  02-InnerSwat.ipynb  03-Run_SWOT_experiments.ipynb  04-Interpreting_experiments_results.ipynb  05-Run_Thresholding.ipynb  06-Interpret_Thresholding.ipynb  07-Run_OPERA_experiments.ipynb  08-Interpret_OPERA_results.ipynb  09-Combined_SWOT_OPERA_results.ipynb  10-Run_Water_Fraction_experiments.ipynb
nbs/Article_Pipeline/: 01-DatesMatch.ipynb
nbs/Main_Pipeline/: 13-Pipeline_1-DatesMatch.ipynb  14-Pipeline_2-Download_data.ipynb  15-Pipeline_3-Create_Ref_Mask.ipynb  16-Pipeline_4-Metrics_2.ipynb  17-Pipeline_5-Water_Frac_thresh.ipynb  18-Pipeline_6-Triangle.ipynb
nbs/dev/: 01-DEV_create_swot_mosaic.ipynb
src/swot_toolkit/: __init__.py  analysis.py  flags.py  kml.py  metrics.py  opera.py  pipe1.py  pipe2.py  pipe3.py  pipe4.py  planetary.py  plotting.py  swot.py  utils.py  water_frac.py
tests/: __init__.py  test_basic.py
